tests/neg-custom-args/captures/nestedclass.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/nestedclass.scala:15:15 ----------------------------------
15 |  val xsc: C = xs  // error
   |               ^^
   |               Found:    (xs : C^{cap1})
   |               Required: C
   |
   |               Note that capability `cap1` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
